# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2063 2011/12/05 18:17:15 cr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta3 2011-12-??
 - 2011-12-05 Fixed bug#7971 - ACL to restrict Priority based on Service does not work in Customer
    interface.
 - 2011-12-05 Fixed bug#7900 - DefaultQueue does not preselect queue in CustomerTicketMessage.
 - 2011-12-05 Fixed bug#7184 - Service catalog is not useable with sophisticated amount of entries.
 - 2011-12-05 Fixed bug#7864 - Inconsequent wrapping of text causes ugly notifications.
 - 2011-12-05 Fixed bug#7967 - Misleading comment on DF Dropdown setup.
 - 2011-12-05 Fixed bug#7966 - Little german translation enhancement.
 - 2011-12-02 Fixed bug#5437 - Reload of TicketFreeTexFields (now DynamicFields) (for ACL).
 - 2011-12-02 Fixed bug#7056 - AgentTicketMove.pm does not handle TicketFreeText
    (now DynamicFields) correctly.
 - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
    tests first group.
 - 2011-12-02 Fixed bug#4548 - 'Ajax overwrites OnChange' in BuildSelection().

3.1.0.beta2 2011-12-06
 - 2011-11-30 Fixed bug#6715 - Setting CustomerID with otrs.AddCustomerUser.pl.
 - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
    with Firefox browser.
 - 2011-11-29 Fixed bug#4957 - Password Change dialog misses "Current Password" option.
 - 2011-11-29 Show Article Creator in article view, similar to Idea#378.
 - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
 - 2011-11-28 Updated CPAN module Mozilla::CA to version 20111025.
 - 2011-11-26 Added ReferenceData object that provides ISO-3166 country codes.
    Could be extend to contain other data later.