@@ -2,7 +2,7 @@
 # AgentTicketZoom.dtl - provides HTML for AgentTicketZoom.pm
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.dtl,v 1.200 2011/11/29 07:23:01 mb Exp $
+# $Id: AgentTicketZoom.dtl,v 1.201 2011/12/05 20:56:03 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -161,7 +161,12 @@
                     <fieldset class="TableLike FixedLabelSmall">
                         <label>$Text{"CustomerID"}:</label>
                         <p class="Value">
+<!-- dtl:block:CustomerIDRW -->
                             <a href="$Config{"CustomerDBLink"}" class="AsPopup PopupType_TicketAction" $Config{"CustomerDBLinkTarget"}>$QData{"CustomerID", "18"}</a>
+<!-- dtl:block:CustomerIDRW -->
+<!-- dtl:block:CustomerIDRO -->
+                            $QData{"CustomerID", "18"}
+<!-- dtl:block:CustomerIDRO -->
                         </p>
                         <div class="Clear"></div>
 <!-- dtl:block:TotalAccountedTime -->
